k8s/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  # Creating pod
  template:
    metadata:
      name: frontend-pod
      namespace: chat-app
      labels:
        app: frontend

    spec:
      containers:
        - name: chatapp-frontend
          image: swaroop0532/chatapp-frontend:latest
          ports:
            - containerPort: 80
          env: #Taken from docker file as it has this variable
            - name: NODE_ENV
              value: production
