k8s/mongodb-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-deployment
  namespace: chat-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  # Creating pod
  template:
    metadata:
      name: mongodb-pod
      namespace: chat-app
      labels:
        app: mongodb

    spec:
      containers:
        - name: chatapp-mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          env: #Taken from docker file as it has this variable
            - name: MONGO_INITDB_ROOT_USERNAME
              value: "mongoadmin"
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: "secret"

      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
